--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@bugsplat/ngx-animated-counter": "^14.0.1",
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "bootstrap": "^5.3.0-alpha2",
+    "mdb-angular-ui-kit": "^4.1.0",
+    "primeng": "^16.0.0-rc.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
