--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.1.0",
+    "@angular/cdk": "^15.0.0",
     "@angular/common": "^15.1.0",
     "@angular/compiler": "^15.1.0",
     "@angular/core": "^15.1.0",
@@ -20,7 +21,9 @@
     "@angular/router": "^15.1.0",
     "@bugsplat/ngx-animated-counter": "^14.0.1",
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "angular-bootstrap-md": "^15.0.0",
     "bootstrap": "^5.3.0-alpha2",
+    "chart.js": "^3.1.1",
     "mdb-angular-ui-kit": "^4.1.0",
     "primeng": "^16.0.0-rc.1",
     "rxjs": "~7.8.0",
