--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angular-bootstrap-md": "^15.0.0",
     "bootstrap": "^5.3.0-alpha2",
     "chart.js": "^3.1.1",
+    "json-server": "^0.17.3",
     "mdb-angular-ui-kit": "^4.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
