--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
     "angular-bootstrap-md": "^15.0.0",
     "bootstrap": "^5.3.0-alpha2",
     "chart.js": "^3.1.1",
+    "jquery": "^3.7.0",
     "json-server": "^0.17.3",
     "mdb-angular-ui-kit": "^4.1.0",
+    "ngx-slick-carousel": "^15.0.0",
+    "nodemailer": "^6.9.4",
     "rxjs": "~7.8.0",
+    "slick-carousel": "^1.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
