--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^15.1.0",
     "@bugsplat/ngx-animated-counter": "^14.0.1",
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "@sendgrid/mail": "^7.7.0",
     "angular-bootstrap-md": "^15.0.0",
     "bootstrap": "^5.3.0-alpha2",
     "chart.js": "^3.1.1",
